# sucky_robot

./: .gitignore  .gitmodules  README.md  build.sh  launch.sh  launch_host.sh  launch_sucky.sh  setup.sh
src/sucky/: CMakeLists.txt  package.xml
src/sucky/config/: battery_monitor.yaml  ekf.yaml  joystick.yaml  rviz.rviz  slam.yaml  sucky_controllers.yaml
src/sucky/launch/: battery_monitor.launch.py  cyclone_controller.launch.py  host.launch.py  realsense.launch.py  realsense_launch.py  roboclaw_battery_monitor_shared.launch.py  servo_controller.launch.py  slam.launch.py  sucky.launch.py  sucky_launch.py
src/sucky/nodes/: arduino_controller.py  battery_monitor.py  cyclone_controller.py  joystick_controller.py  servo_controller.py  sucky_joy.py
src/sucky/scripts/: roboclaw_battery_monitor_shared.py
src/sucky/scripts/plc/: troubleshoot_plc.py
src/sucky/test/: test_cyclone.py  test_joystick.py  test_servo.py
src/sucky/tools/: arduino_serial.py
src/sucky/tools/plc/: getClock.py  setClock.py
src/sucky/urdf/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sensor_d455.urdf.xacro  sensor_d455_usb_plug.urdf.xacro  sensor_sick.xacro
src/sucky_arduino/src/: main.cpp
